# perfana-ds

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: build.yml  ci.yml
documentation/: DYNATRACE_CONFIGURATION.md  metrics-pipeline.md  perfana-check-functionality.md
src/perfana_ds/: __init__.py  project_settings.py
src/perfana_ds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/perfana_ds/catalog/: __init__.py  catalog.py  ds.py
src/perfana_ds/common/: async_requests.py  changepoints.py  common_pandas.py  dynatrace_api_auth.py  grafana_api_auth.py  model_fields.py
src/perfana_ds/datasets/: abstract.py  mongo.py  mongo_data.py
src/perfana_ds/pipelines/: common.py
src/perfana_ds/pipelines/adapt/: adapt_conclusion.py  adapt_input.py  adapt_results.py  adapt_tracked_results.py  backfill_missing_metrics.py  pipeline.py
src/perfana_ds/pipelines/checks/: README.md  __init__.py  base.py  benchmark_comparison.py  benchmark_matcher.py  data_aggregator.py  pipeline.py  requirement_checker.py
src/perfana_ds/pipelines/control_groups/: create.py  pipeline.py
src/perfana_ds/pipelines/dynatrace/: api_client.py  data_processor.py  pipeline.py  query_constructor.py
src/perfana_ds/pipelines/metrics/: clean.py  format_result.py  nodes.py  pipeline.py  queries.py  query_panels.py  reevaluate.py
src/perfana_ds/pipelines/panels/: dashboards.py  datasources.py  nodes.py  perfana_data.py  pipeline.py  query_template_variables.py
src/perfana_ds/pipelines/statistics/: aggregation.py  pipeline.py
src/perfana_ds/schemas/: adapt_conclusion.py  adapt_result.py  base_document.py  base_extra.py  changepoint.py  compare_config.py  control_group_statistics.py  control_groups.py  control_runs.py  dynatrace_dql.py  metric_classification.py  metric_comparison.py  metric_statistics.py  panel_document.py  panel_metrics.py  panel_query_request.py  panel_query_result.py  tracked_difference.py
src/perfana_ds/schemas/dynatrace/: dashboard.py  datasource.py  panel.py  tile.py
src/perfana_ds/schemas/grafana/: dashboard.py  datasource.py  flamegraph.py  panel.py
src/perfana_ds/schemas/perfana/: __init__.py  application_dashboards.py  applications.py  benchmark.py  benchmarks.py  check_results.py  compare_results.py  enums.py  grafana_dashboards.py  (+1 more)
src/perfana_ds_api/: app.py  tags.py  worker.py
src/perfana_ds_api/routes/: __init__.py  data.py  health.py  manage.py
src/tests/: README.md  test.env  test_check_pipeline_integration.py  test_runner.py
src/tests/dynatrace-dashboards/: Kubernetes-Node -Pods.json
src/tests/routes/: test_health.py
(+31 files in other folders)
